fixed no item view's alignment

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -286,6 +286,7 @@ resurrection.activity.styl
 
           .nothing
             background    #d9d9d9
+            width         278px
             font-size     14px
             padding       16px 26px
             rounded       4px
